--- a/index.html
+++ b/index.html
@@ -101,24 +101,45 @@
 
 <section>
     <h2>Overview</h2>
-    <p>The Semantic Web was envisioned as a space where autonomous agents collaborate with humans to navigate, reason with, and act upon structured knowledge. While core technologies like RDF, OWL, and SPARQL have matured, the original vision remains unfulfilled.</p>
-    <p>Recent advances in generative AI and multi-agent systems open new possibilities — but challenges around semantic grounding, goal-driven autonomy, and trustworthiness remain. This workshop brings together researchers and practitioners from Semantic Web, AI, multi-agent systems, and robotics to explore how generative AI can be integrated with Semantic Web technologies to create semantically grounded, context-aware, interoperable, and autonomous agents.</p>
+    <p>The original vision of the Semantic Web, articulated in the seminal Scientific American article by Berners-Lee, Hendler, and Lassila, placed autonomous agents at the heart of the Web’s evolution: agents capable of discovering, reasoning over, and acting upon structured, linked data to assist users, automate tasks, collaborate across services, and facilitate knowledge-driven decision-making. These agents were conceived as proactive participants in a globally distributed, machine-readable ecosystem. However, two decades later and despite significant progress in ontologies, reasoning technologies, and the creation of a vast Linked Data cloud, autonomous agents that truly reason with and act upon structured knowledge remain elusive. The recent emergence of generative AI systems has revived interest in this vision; introducing new capabilities for communication, abstraction, and interaction, although often lacking semantic grounding, verifiability, or goal-driven autonomy.</p>
+    <p>This Dagstuhl-style workshop aims to bring together researchers and practitioners to critically examine how recent developments can be harnessed to revisit and realise the agent-focussed vision of the Semantic Web. Through discussion that integrates relevant disciplines across the Semantic Web, artificial intelligence, multi-agent systems, and robotics, we will explore what opportunities generative AI introduces for autonomous agents capable of semantically grounded, context-aware, and interoperable decision-making, what challenges remain, and how we can build such agents - both in digital spaces and real-world environments.</p>
 </section>
 
-<section>
-    <h2>Topics of Interest</h2>
-    <ul>
-        <li>Integration of generative AI, Semantic Web, and neuro-symbolic approaches.</li>
-        <li>Agent communication protocols and semantic interoperability.</li>
-        <li>Ontology-based and knowledge graph approaches for planning and execution.</li>
-        <li>Situated reasoning in dynamic environments.</li>
-        <li>Trustworthiness, explainability, and verification of autonomous agents.</li>
-        <li>Human–agent interaction and hybrid human–robot intelligence.</li>
-        <li>Affordance modelling and contextual action reasoning.</li>
-        <li>Multimodal knowledge representation in embodied agents.</li>
-        <li>Applications in smart environments, digital assistants, and service composition.</li>
-    </ul>
-</section>
+ <section aria-labelledby="motivation">
+      <h2 id="motivation">Motivation and Scope</h2>
+      <p>The Semantic Web was originally conceived as a knowledge-rich infrastructure where intelligent agents and humans would seamlessly navigate, reason with, and act upon structured information on behalf of (human) users. These agents would discover services, negotiate tasks, and coordinate with each other and with humans, leveraging ontologies and formal semantics to make autonomous decisions in dynamic environments.</p>
+      <p>While foundational technologies such as RDF, OWL, SPARQL, and reasoning engines have matured, this broader vision of autonomous agents operating on the Web has not been fully realised. In practice, many Semantic Web applications remain passive data providers or consumers, lacking proactivity and the situated intelligence needed for action, adaptation, or collaboration.</p>
+      <p>The landscape is now shifting. Generative AI systems, and particularly large language models, offer powerful capabilities for language understanding, planning, and interaction. However, these models operate largely on statistical associations and require integration with structured, verified knowledge to become trustworthy, goal-directed agents.</p>
+      <p>At the same time, new agent communication protocols and semantic coordination mechanisms are being proposed to enable interoperability of “agentic” generative AI systems on the Web. In parallel, insights from autonomous robotics highlight the importance of executable knowledge, action abstraction, common-sense reasoning and symbol grounding, challenges also faced by software agents acting in complex digital environments. These developments should be contextualized and integrated so as to avoid reinventing the wheel and to profit from decades of research in the (Semantic) Web, multi-agent systems, and robotics fields. The ISWC research community is ideally placed to lead this effort.</p>
+      <p>This workshop aims to bring together researchers and practitioners from the Semantic Web, robotics, and agent-based computing communities to examine the fundamental requirements to support the development of autonomous agents that:</p>
+      <ul>
+        <li>Reason with both structured ontologies and unstructured generative models;</li>
+        <li>Translate high-level knowledge into actionable plans;</li>
+        <li>Communicate and coordinate with other agents using shared semantics;</li>
+        <li>Model and reason about affordances to determine possible actions in context;</li>
+        <li>Operate robustly in dynamic, open, large-scale, partially observable environments;</li>
+        <li>Make decisions grounded in context, verifiability, and user intent;</li>
+        <li>Embodied agents that ground knowledge in perception and action to operate effectively in the physical world;</li>
+        <li>Hybrid human-artificial systems combining human insight with autonomous agent capabilities.</li>
+      </ul>
+      <p>Our goal is to advance the understanding and design of intelligent agents that fulfill the original promise of the Semantic Web, not only as producers or consumers of knowledge, but as semantic actors capable of autonomous, trustworthy, and context-aware behaviour.</p>
+    </section>
+
+    <section aria-labelledby="topics">
+      <h2 id="topics">Topics of Interest</h2>
+      <ul>
+        <li>Integration of generative AI, Semantic Web technologies and neuo-symbolic approaches for coordination and decision-making;</li>
+        <li>Agent communication protocols and semantic interoperability;</li>
+        <li>Symbolic approaches for intelligent agents;</li>
+        <li>Ontology-based and KG approaches for planning, symbol grounding, and action execution;</li>
+        <li>Situated reasoning in dynamic digital or physical environments;</li>
+        <li>Semantically grounded trustworthiness, explainability, and verification of autonomous agents;</li>
+        <li>Human-agent interaction and hybrid human-robot intelligence collaboration frameworks;</li>
+        <li>Affordance modelling and contextual action reasoning for autonomous agents;</li>
+        <li>Multimodal knowledge representation in embodied agents;</li>
+        <li>Applications in domains such as smart environments, digital assistants, and service composition.</li>
+      </ul>
+    </section>
 
 <section>
     <h2>Submission Guidelines</h2>
@@ -133,9 +154,9 @@
 <section>
     <h2>Organizers</h2>
     <ul>
-        <li><strong>Ora Lassila</strong> — Principal Graph Technologist, Amazon Neptune, USA</li>
-        <li><strong>Valentina Tamma</strong> — Associate Professor, University of Liverpool, UK</li>
-        <li><strong>Ilaria Tiddi</strong> — Assistant Professor in Hybrid Intelligence, Vrije Universiteit Amsterdam, NL</li>
+        <li><strong>Ora Lassila</strong>, Amazon Neptune, USA</li>
+        <li><strong>Valentina Tamma</strong>, University of Liverpool, UK</li>
+        <li><strong>Ilaria Tiddi</strong>, Vrije Universiteit Amsterdam, NL</li>
     </ul>
 </section>
 
