--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <main>
 
-<section>
+<section aria-labelledby="overview">
     <h2>Overview</h2>
     <p>The original vision of the Semantic Web, articulated in the seminal Scientific American article by Berners-Lee, Hendler, and Lassila, placed autonomous agents at the heart of the Web’s evolution: agents capable of discovering, reasoning over, and acting upon structured, linked data to assist users, automate tasks, collaborate across services, and facilitate knowledge-driven decision-making. These agents were conceived as proactive participants in a globally distributed, machine-readable ecosystem. However, two decades later and despite significant progress in ontologies, reasoning technologies, and the creation of a vast Linked Data cloud, autonomous agents that truly reason with and act upon structured knowledge remain elusive. The recent emergence of generative AI systems has revived interest in this vision; introducing new capabilities for communication, abstraction, and interaction, although often lacking semantic grounding, verifiability, or goal-driven autonomy.</p>
     <p>This Dagstuhl-style workshop aims to bring together researchers and practitioners to critically examine how recent developments can be harnessed to revisit and realise the agent-focussed vision of the Semantic Web. Through discussion that integrates relevant disciplines across the Semantic Web, artificial intelligence, multi-agent systems, and robotics, we will explore what opportunities generative AI introduces for autonomous agents capable of semantically grounded, context-aware, and interoperable decision-making, what challenges remain, and how we can build such agents - both in digital spaces and real-world environments.</p>
