--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <section>
     <h2>Submission Guidelines</h2>
     <p>We invite position statements (max 3 pages, excluding references) on novel research directions, conceptual frameworks, tools, datasets, or open challenges.</p>
-    <p> Submissions must be in PDF format, using the CEUR Publications format style file for CEUR workshop proceedings. 
+    <p> Submissions must be in PDF format, using the CEUR Publications style file for CEUR workshop proceedings. 
     <p> A template is available at 
   <a href="https://www.overleaf.com/read/pwspggxsbdvy" target="_blank" rel="noopener noreferrer">
     https://www.overleaf.com/read/pwspggxsbdvy
