--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 <section>
     <h2>Submission Guidelines</h2>
     <p>We invite position statements (max 3 pages, excluding references) on novel research directions, conceptual frameworks, tools, datasets, or open challenges.</p>
-    <p> Submissions must be in PDF format, using the CEUR Publications style file for CEUR workshop proceedings. 
-    <p> A template is available at 
+    <p> Submissions must be in PDF format, using the CEUR Publications style file for CEUR workshop proceedings. </p>
+    <p>
   <a class="button" href="https://www.overleaf.com/project/68a226cefb7d83527a08f80d" target="_blank" rel="noopener noreferrer">Open Overleaf Template</a>
     https://www.overleaf.com/read/pwspggxsbdvy
   </a>.
