--- a/index.html
+++ b/index.html
@@ -169,11 +169,9 @@
 
 <section>
     <h2>Expected Outcomes</h2>
-    <ol>
-        <li>Shared Research Agenda — Identify and prioritize open challenges in autonomous agents integrating Semantic Web and generative AI.</li>
-        <li>Community Building — Establish an interdisciplinary research network.</li>
-        <li>Dagstuhl Seminar Proposal — Prepare a follow-up event to develop the research agenda further.</li>
-    </ol>
+    <p>This workshop aims to foster the creation of an interdisciplinary community to advancing the vision of autonomous, semantically grounded agents. 
+     Through collaborative discussions, we will define a shared research agenda that identifies key challenges, aligns priorities across disciplines, and lays the foundation for sustained collaboration and future initiatives.
+     We aim to prepare a follow-up Dagstuhl seminar to develop the research agenda further </p> 
 </section>
 
 </main>
