--- a/index.html
+++ b/index.html
@@ -144,7 +144,23 @@
     <h2>Submission Guidelines</h2>
     <p>We invite position statements (max 3 pages, excluding references) on novel research directions, conceptual frameworks, tools, datasets, or open challenges.</p>
     <p> Submissions must be in PDF format, using the CEUR Publications style file for CEUR workshop proceedings. </p>
-    <p>
+    <p> Note we do *NOT* require original unpublished research, or indeed thebsubmission of technical papers. We are looking for expressions of
+      interest to present research or demos, and the submission process is lightweight.
+
+      During the submission, you will be asked to upload a paper: you can
+      upload a paper (published or unpublished), report, presentation, or
+     any other document in the form of a PDF, to support your
+     application. 
+  
+      You should use the abstract to briefly describe what work you want to
+     present and how it relates to the theme of the event.
+
+    * DEADLINE FOR EXPRESSIONS OF INTEREST: FRIDAY 8 AUGUST 2025 AOE *. 
+
+     Expressions of interest will be only lightly reviewed, focussing on
+     relevance/interest. Detailed reviews will not be provided. A token fee
+     will be charged for attendance; consideration will be given for
+     participants unable to pay the fee. </p>
     <a class="button" href="https://www.overleaf.com/project/68a226cefb7d83527a08f80d" target="_blank" rel="noopener noreferrer">Open Overleaf Template</a>
   </a>.
 </p>
