--- a/index.html
+++ b/index.html
@@ -143,25 +143,21 @@
 <section>
     <h2>Submission Guidelines</h2>
     <p>We invite position statements (max 3 pages, excluding references) on novel research directions, conceptual frameworks, tools, datasets, or open challenges.</p>
-    <p> Submissions must be in PDF format, using the CEUR Publications style file for CEUR workshop proceedings. </p>
-    <p> Note we do *NOT* require original unpublished research, or indeed thebsubmission of technical papers. We are looking for expressions of
-      interest to present research or demos, and the submission process is lightweight.
+    <p> Submissions must be in PDF format, using the CEUR Publications style file for CEUR workshop proceedings. We are looking for expressions of
+      interest to present research or demos, and the submission process is lightweight. We do *NOT* require original unpublished research, or indeed the submission of technical papers. 
 
-      During the submission, you will be asked to upload a paper: you can
-      upload a paper (published or unpublished), report, presentation, or
-     any other document in the form of a PDF, to support your
-     application. 
+      During the submission process, you will be asked to upload a paper: you can
+      upload the 3 page expeession or interest, or a paper (published or unpublished), report, presentation, or any other document in the form of a PDF, to support your
+      application and illustrate how you can contribute to the discussion. 
   
-      You should use the abstract to briefly describe what work you want to
-     present and how it relates to the theme of the event.
-
-    * DEADLINE FOR EXPRESSIONS OF INTEREST: FRIDAY 8 AUGUST 2025 AOE *. 
+      Please use the abstract field to briefly describe the work you want to present and how it relates to the theme of the event.
 
      Expressions of interest will be only lightly reviewed, focussing on
-     relevance/interest. Detailed reviews will not be provided. A token fee
-     will be charged for attendance; consideration will be given for
-     participants unable to pay the fee. </p>
-    <a class="button" href="https://www.overleaf.com/project/68a226cefb7d83527a08f80d" target="_blank" rel="noopener noreferrer">Open Overleaf Template</a>
+     relevance/interest. Detailed reviews will not be provided. Participants are expected to be registered to be registered to the conference and workshps. </p>
+
+     We will publish online the 3 page position statements and the abstracts of other publications submitted.
+ 
+ <a class="button" href="https://www.overleaf.com/project/68a226cefb7d83527a08f80d" target="_blank" rel="noopener noreferrer">Open Overleaf Template</a>
   </a>.
 </p>
 
