--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
  
  <a class="button" href="https://www.overleaf.com/project/68a226cefb7d83527a08f80d" target="_blank" rel="noopener noreferrer">Open Overleaf Template</a>
   </a>.
+ <a class="button" href="https://easychair.org/conferences?conf=reagentsw2025" target="_blank" rel="noopener noreferrer">Easychair submission</a>
+  </a>.
 </p>
 
     </p>
