--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <section>
     <h2>Submission Guidelines</h2>
     <p>We invite position statements (max 3 pages, excluding references) on novel research directions, conceptual frameworks, tools, datasets, or open challenges.</p>
-    <p> Submissions must be in PDF format, using the CEUR Publications style file for CEUR workshop proceedings. We are looking for expressions of
+    <p> Submissions must be in PDF format, using the <a href="https://www.overleaf.com/project/68a226cefb7d83527a08f80d"> CEUR Publications</a> style file for CEUR workshop proceedings. We are looking for expressions of
       interest to present research or demos, and the submission process is lightweight. We do *NOT* require original unpublished research, or indeed the submission of technical papers. 
 
       During the submission process, you will be asked to upload a paper: you can
