--- a/index.html
+++ b/index.html
@@ -156,9 +156,6 @@
      relevance/interest. Detailed reviews will not be provided. Participants are expected to be registered to be registered to the conference and workshps. </p>
 
      We will publish online the 3 page position statements and the abstracts of other publications submitted.
- 
- <a class="button" href="https://www.overleaf.com/project/68a226cefb7d83527a08f80d" target="_blank" rel="noopener noreferrer">Open Overleaf Template</a>
-  </a>.
  <a class="button" href="https://easychair.org/conferences?conf=reagentsw2025" target="_blank" rel="noopener noreferrer">Easychair submission</a>
   </a>.
 </p>
@@ -166,8 +163,8 @@
     </p>
 
     <div class="dates">
-        <div class="date-card"><strong>📄 Submission deadline:</strong> September 1, 2025</div>
-        <div class="date-card"><strong>✉ Notification:</strong> September 20, 2025</div>
+        <div class="date-card"><strong>📄 Submission deadline:</strong> September 19, 2025</div>
+        <div class="date-card"><strong>✉ Notification:</strong> October 10, 2025</div>
         <div class="date-card"><strong>🗓 Workshop:</strong> November 2–3, 2025</div>
     </div>
 </section>
@@ -175,9 +172,9 @@
 <section>
     <h2>Organizers</h2>
     <ul>
-        <li><strong>Ora Lassila</strong>, Amazon Neptune, USA</li>
-        <li><strong>Valentina Tamma</strong>, University of Liverpool, UK</li>
-        <li><strong>Ilaria Tiddi</strong>, Vrije Universiteit Amsterdam, NL</li>
+        <li><a href="https://www.lassila.org"><strong>Ora Lassila</strong></a>, Amazon Neptune, USA</li>
+        <li><a href="https://www.liverpool.ac.uk/people/valentina-tamma"><strong>Valentina Tamma</strong></a>, University of Liverpool, UK</li>
+        <li><a href="https://research.vu.nl/en/persons/ilaria-tiddi"><strong>Ilaria Tiddi</strong></a>, Vrije Universiteit Amsterdam, NL</li>
     </ul>
 </section>
 
