Update submission deadline and organizer link

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     </p>
 
     <div class="dates">
-        <div class="date-card"><strong>📄 Submission deadline:</strong> September 19, 2025</div>
-        <div class="date-card"><strong>✉ Notification:</strong> October 10, 2025</div>
+        <div class="date-card"><strong>📄 Submission deadline:</strong> Rolling 2025</div>
+        <!--- div class="date-card"><strong>✉ Notification:</strong> October 10, 2025</div --->
         <div class="date-card"><strong>🗓 Workshop:</strong> November 2–3, 2025</div>
     </div>
 </section>
@@ -175,7 +175,7 @@
     <ul>
         <li><a href="https://www.lassila.org"><strong>Ora Lassila</strong></a>, Amazon Neptune, USA</li>
         <li><a href="https://www.liverpool.ac.uk/people/valentina-tamma"><strong>Valentina Tamma</strong></a>, University of Liverpool, UK</li>
-        <li><a href="https://research.vu.nl/en/persons/ilaria-tiddi"><strong>Ilaria Tiddi</strong></a>, Vrije Universiteit Amsterdam, NL</li>
+        <li><a href="https://kmitd.github.io/ilaria"><strong>Ilaria Tiddi</strong></a>, Vrije Universiteit Amsterdam, NL</li>
     </ul>
 </section>
 
