Update submission deadline text in index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </p>
 
     <div class="dates">
-        <div class="date-card"><strong>📄 Submission deadline:</strong> Rolling 2025</div>
+        <div class="date-card"><strong>📄 Submission deadline:</strong> Rolling</div>
         <!--- div class="date-card"><strong>✉ Notification:</strong> October 10, 2025</div --->
         <div class="date-card"><strong>🗓 Workshop:</strong> November 2–3, 2025</div>
     </div>
