Revise submission guidelines and workshop dates
Updated submission guidelines to clarify requirements and deadlines.

--- a/index.html
+++ b/index.html
@@ -142,18 +142,17 @@
 
 <section>
     <h2>Submission Guidelines</h2>
-    <p>We invite position statements (max 3 pages, excluding references) on novel research directions, conceptual frameworks, tools, datasets, or open challenges.</p>
-    <p> Submissions must be in PDF format, using the <a href="https://www.overleaf.com/project/68a226cefb7d83527a08f80d"> CEUR Publications</a> style file for CEUR workshop proceedings. We are looking for expressions of
-      interest to present research or demos, and the submission process is lightweight. We <b>do NOT</b> require original unpublished research, or indeed the submission of technical papers. </p>
+    <p>We invite the submission of either position statements (max 3 pages, excluding references) or published or unpublished papers. We <b>do NOT</b> require original unpublished research, or indeed the submission of technical papers. </p>   
+    <p> Submissions must be in PDF format. We are looking for expressions of interest to present research or demos, and papers related to the topics of interests. 
 
     <p>  During the submission process, you will be asked to upload a paper: you can
       upload the 3 page expeession or interest, or a paper (published or unpublished), report, presentation, or any other document in the form of a PDF, to support your
       application and illustrate how you can contribute to the discussion. Please use the abstract field to briefly describe the work you want to present and how it relates to the theme of the event.</p>
 
-    <p> Expressions of interest will be only lightly reviewed, focussing on
+    <p> Expressions of interest and papers will be only lightly reviewed, focussing on
      relevance/interest. Detailed reviews will not be provided. Participants are expected to be registered to the conference and workshps. </p>
 
-    <p>  We will publish online the 3 page position statements and the abstracts of other publications submitted.</p>
+    <p>  We will publish online the position statements and the abstracts of other publications submitted.</p>
  <p></p>
  <a class="button" href="https://easychair.org/conferences?conf=reagentsw2025" target="_blank" rel="noopener noreferrer">Easychair submission</a>
   </a>
@@ -163,8 +162,8 @@
 
     <div class="dates">
         <div class="date-card"><strong>📄 Submission deadline:</strong> Rolling</div>
-        <!--- div class="date-card"><strong>✉ Notification:</strong> October 10, 2025</div --->
-        <div class="date-card"><strong>🗓 Workshop:</strong> November 2–3, 2025</div>
+        <!--- div class="date-card"><strong>✉ Notification:</strong> October 25, 2025</div --->
+        <div class="date-card"><strong>🗓 Workshop:</strong> November 3 and November 6, 2025</div>
     </div>
 </section>
 
