Revise workshop date and submission guidelines
Updated workshop dates and refined submission guidelines text.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <header>
     <h1>ReAGENT-SW: Realising Autonomous Generative Agents for the Semantic Web</h1>
-    <p>Workshop at ISWC 2025 • November 2–3, 2025</p>
+    <p>Workshop at ISWC 2025 • November 3 (all day) and November 6 2025</p>
 </header>
 
 <main>
@@ -143,9 +143,9 @@
 <section>
     <h2>Submission Guidelines</h2>
     <p>We invite the submission of either position statements (max 3 pages, excluding references) or published or unpublished papers. We <b>do NOT</b> require original unpublished research, or indeed the submission of technical papers. </p>   
-    <p> Submissions must be in PDF format. We are looking for expressions of interest to present research or demos, and papers related to the topics of interests. 
+    <p> Submissions must be in PDF format. We are looking for expressions of interest that present research or demos, and papers related to the topics of interests. 
 
-    <p>  During the submission process, you will be asked to upload a paper: you can
+    <p>  During the submission process, you will be asked to upload a paper: you can either
       upload the 3 page expeession or interest, or a paper (published or unpublished), report, presentation, or any other document in the form of a PDF, to support your
       application and illustrate how you can contribute to the discussion. Please use the abstract field to briefly describe the work you want to present and how it relates to the theme of the event.</p>
 
