--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <header>
     <h1>ReAGENT-SW: Realising Autonomous Generative Agents for the Semantic Web</h1>
-    <p>Workshop at ISWC 2025 • November 3 (all day) and November 6 2025</p>
+    <p>Workshop at ISWC 2025 • November 3 (<b>from 1.30 pm)</b> and November 6 2025</p>
 </header>
 
 <main>
@@ -104,6 +104,13 @@
     <p>The original vision of the Semantic Web, articulated in the seminal Scientific American article by Berners-Lee, Hendler, and Lassila, placed autonomous agents at the heart of the Web’s evolution: agents capable of discovering, reasoning over, and acting upon structured, linked data to assist users, automate tasks, collaborate across services, and facilitate knowledge-driven decision-making. These agents were conceived as proactive participants in a globally distributed, machine-readable ecosystem. However, two decades later and despite significant progress in ontologies, reasoning technologies, and the creation of a vast Linked Data cloud, autonomous agents that truly reason with and act upon structured knowledge remain elusive. The recent emergence of generative AI systems has revived interest in this vision; introducing new capabilities for communication, abstraction, and interaction, although often lacking semantic grounding, verifiability, or goal-driven autonomy.</p>
     <p>This Dagstuhl-style workshop aims to bring together researchers and practitioners to critically examine how recent developments can be harnessed to revisit and realise the agent-focussed vision of the Semantic Web. Through discussion that integrates relevant disciplines across the Semantic Web, artificial intelligence, multi-agent systems, and robotics, we will explore what opportunities generative AI introduces for autonomous agents capable of semantically grounded, context-aware, and interoperable decision-making, what challenges remain, and how we can build such agents - both in digital spaces and real-world environments.</p>
 </section>    
+ <section aria-labelledby="Programme">
+  <li><b>13:30 to 14:00:</b> Initial discussion of themes and formation of groups  </li> 
+  <li><b>14:00 to 15:00:</b> Discussion time </li> 
+  <li><b>15:00 to 15:30:</b> Coffee break, but keep discussing! </li> 
+  <li><b>15:30 to 16:30:</b> Continue the discussion among the groups </li> 
+  <li><b>16:30 to 17:30:</b> Groups to present a summary of the discussion </li> 
+</section> 
  <section aria-labelledby="motivation">
       <h2 id="motivation">Motivation and Scope</h2>
       <p>The Semantic Web was originally conceived as a knowledge-rich infrastructure where intelligent agents and humans would seamlessly navigate, reason with, and act upon structured information on behalf of (human) users. These agents would discover services, negotiate tasks, and coordinate with each other and with humans, leveraging ontologies and formal semantics to make autonomous decisions in dynamic environments.</p>
