Fix typo in workshop program heading

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <p>This Dagstuhl-style workshop aims to bring together researchers and practitioners to critically examine how recent developments can be harnessed to revisit and realise the agent-focussed vision of the Semantic Web. Through discussion that integrates relevant disciplines across the Semantic Web, artificial intelligence, multi-agent systems, and robotics, we will explore what opportunities generative AI introduces for autonomous agents capable of semantically grounded, context-aware, and interoperable decision-making, what challenges remain, and how we can build such agents - both in digital spaces and real-world environments.</p>
 </section>    
  <section aria-labelledby="Programme">
-   <h2 id="programme">Programmee</h2>
+   <h2 id="programme">Programme</h2>
   <p>The workshop will take place in room 1.06</p>
   <li><b>13:30 to 14:00:</b> Initial discussion of themes and formation of groups  </li> 
   <li><b>14:00 to 15:00:</b> Discussion time </li> 
